Queda copiada la correccion actual en el portapapeles

--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,8 @@
     "clipboardWrite",
     "contextMenus",
     "tabs",
-    "storage"
+    "storage",
+     "activeTab"
   ],
   "content_scripts": [
     {
